--- a/src/scss/modules/_mobile-nav.scss
+++ b/src/scss/modules/_mobile-nav.scss
@@ -1,7 +1,7 @@
 .mobile-nav {
   // display: none;
-  position: absolute;
-  // position: fixed;
+  // position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
